   * Improved wrapping in the new widgets.
   * Improved easy close handling.
   * Added a horizontal scrollbar widget.
   * Made the border scrolling threshold a (hidden) preference and made it
     default to 10 instead of 5 pixels.
 * WML engine:
   * Ignore whitespace at the beginning or end of event names
   * Added the 'round' key to [set_variable].
   * It is possible to override the end-of-campaign screen text
     and its duration using end_text and end_text_duration attributes
     respectively, in [endlevel] or [campaign] tags. end_text_duration
     is measured in milliseconds. (feature #10449)
   * [modify_turns] now works in scenarios without a turn limit. (bug #12715)
 * Miscellaneous and bug fixes:
   * Compressed start-of-scenario saves are properly recognized by the
     load-game dialog again.
   * Fixed replays for single-player campaigns (bug #12005).
   * Fixed the restart-replay button causing an assertion failure.
   * New memory allocator introduced to the engine. It should
     produce 5-10% savings in memory usage on 64-bit systems.
   * Included extra headers for certain g++ versions (patch #1113).
   * Fixed random memory corruption/assertion failure/massive leak due
     to story  screens.
   * Fixed [role] not working when no type was specified (bug #12660).
   * Fixed compilation with Python 2.6 (bug #12638 (included a patch)).
   * Fixed spammy multiplication of advancement options for units
     affected by the [unit_type][advancefrom] clause (observed in
     add-on Invasion_from_the_Unknown from the wesnoth-umc-dev
     trunk) each time advancements were evaluated.

Version 1.5.6:
 * Authoring tools:
   * trackplacer is a pygtk tool that makes it possible to visually edit
     the journey tracks on Wesnoth campaign maps.
 * Campaigns:
   * Descent into Darkness
     * Added a set of story art.
     * Made Malin's side use the ostensibly obscure undead flags after his
       banishment
   * Eastern Invasion